@@ -1,3 +1,11 @@
+2003-04-11  John Dallaway  <jld@ecoscentric.com>
+
+	* standalone/wxwin/ecutils.cpp, standalone/wxwin/ecutils.h: Create
+	wxString wrappers for cygwin_conv_to_*_path().
+
+	* standalone/wxwin/appsettings.cpp: Accommodate POSIX-style values of
+	the ECOS_REPOSITORY environment variable.
+
 2003-04-10  John Dallaway  <jld@ecoscentric.com>
 
 	* standalone/wxwin/docsystem.cpp: Eliminate pop-up warning when
